Closed
Bug 857936
Opened 12 years ago
Closed 12 years ago
ARIA columnheader/rowheader should inherit editable state
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla23
| Tracking | Status | |
|---|---|---|
| firefox22 | --- | fixed |
People
(Reporter: surkov, Assigned: surkov)
References
(Blocks 1 open bug)
Details
(Keywords: access, regression)
Attachments
(1 file)
|
6.39 KB,
patch
|
tbsaunde
:
review+
akeybl
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
it should have been a part of bug 835121 (ARIA 268 test failure: https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported-inherited/roles-properties-supported-inherited-columnheader-aria-readonly-false.html)
Attachment #733213 -
Flags: review?(trev.saunders)
Comment 1•12 years ago
|
||
Comment on attachment 733213 [details] [diff] [review]
patch
yeah, I should have thought of this :(
Attachment #733213 -
Flags: review?(trev.saunders) → review+
| Assignee | ||
Comment 2•12 years ago
|
||
Flags: in-testsuite+
Comment 3•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
Comment 4•12 years ago
|
||
Comment on attachment 733213 [details] [diff] [review]
patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 835121
User impact if declined: Half-baked WAI-ARIA 1.0 compliance in this area.
Testing completed (on m-c, etc.): Yes
Risk to taking this patch (and alternatives if risky): None.
String or IDL/UUID changes made by this patch:None.
Attachment #733213 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 5•12 years ago
|
||
(In reply to Marco Zehe (:MarcoZ) from comment #4)
> Bug caused by (feature/regressing bug #): 835121
technically speaking it wasn't a regression from bug 835121
Comment 6•12 years ago
|
||
What version is ARIA compliance meant to go into first? Bug 343213 doesn't make that clear.
Also, does comment 5 mean to imply that this isn't a regression because ARIA is a new feature? Or is there another regressing bug?
| Assignee | ||
Comment 7•12 years ago
|
||
(In reply to Alex Keybl [:akeybl] from comment #6)
> What version is ARIA compliance meant to go into first? Bug 343213 doesn't
> make that clear.
version of what? Firefox? I think we didn't even finish.
> Also, does comment 5 mean to imply that this isn't a regression because ARIA
> is a new feature? Or is there another regressing bug?
sort of, it's not a regression because we never did it this way (i.e we never exposed these states on these elements). This bug and bug 343213 are needed for the feature completeness.
Comment 8•12 years ago
|
||
Thanks, I was trying to understand the criticality of fixing this in FF21. We'll approve for uplift given the low risk profile, but don't feel this regression warrants tracking due to the low user impact.
Blocks: 835121
Keywords: regression
Updated•12 years ago
|
Attachment #733213 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 9•12 years ago
|
||
Pushed on Surkov's behalf: https://hg.mozilla.org/releases/mozilla-aurora/rev/c417d27abcb7
status-firefox22:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•