Bug 857936 - ARIA columnheader/rowheader should inherit editable state, r=tbsaunde